{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 88,
  "lineage": "0a405b90-f526-2004-0d4b-f5fd84ca6664",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:282061376516:route-table/rtb-03fda555c6c35a1e5",
            "default_route_table_id": "rtb-03fda555c6c35a1e5",
            "id": "rtb-03fda555c6c35a1e5",
            "owner_id": "282061376516",
            "propagating_vgws": null,
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-092fed41ffac6df72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:282061376516:vpc/vpc-092fed41ffac6df72",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-002fc212359c4b93a",
            "default_route_table_id": "rtb-03fda555c6c35a1e5",
            "default_security_group_id": "sg-03760d6acce69ef1f",
            "dhcp_options_id": "dopt-0e014c87049a96ce5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-092fed41ffac6df72",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03fda555c6c35a1e5",
            "owner_id": "282061376516"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:282061376516:route-table/rtb-0a946227959883445",
            "id": "rtb-0a946227959883445",
            "owner_id": "282061376516",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rr"
            },
            "tags_all": {
              "Name": "rr"
            },
            "timeouts": {
              "create": "6m",
              "delete": "6m",
              "update": "3m"
            },
            "vpc_id": "vpc-0b76cbfa2bd868650"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:282061376516:vpc/vpc-0b76cbfa2bd868650",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0756d6e7ee3157a39",
            "default_route_table_id": "rtb-063a0e89788d876fe",
            "default_security_group_id": "sg-0c1115ed90e99573b",
            "dhcp_options_id": "dopt-0e014c87049a96ce5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b76cbfa2bd868650",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-063a0e89788d876fe",
            "owner_id": "282061376516"
          }
        }
      ]
    }
  ]
}